testsuite/tests/interpreter_errors/selector_unpack_wrong/test.out
script.lkql:2:23: error: Type error: expected Iterable but got Node
  2 |     | AdaNode => rec(*this.parent, this)
    |                       ^^^^^^^^^^^
